# pao-project

./: CMakeLists.txt  README.md
Cached/: main.cpp
CachedOpenMP/: main.cpp
Graph/: CMakeLists.txt  Graph.cpp  Graph.hpp
Naive/: CMakeLists.txt  main.cpp
NaiveOpenMP/: main.cpp
OpenCL/: CMakeLists.txt  main.cpp  shortcut.cl
OpenCLSwapped/: main.cpp  shortcut.cl
OpenMP/: CMakeLists.txt  main.cpp
Presentation/: main.tex
SIMD/: main.cpp
SIMDOpenMP/: main.cpp
Time/: CMakeLists.txt  Time.hpp
libs/Graph/: CMakeLists.txt  Graph.cpp  Graph.hpp
libs/OpenCLHelpers/: CMakeLists.txt  OpenCLHelpers.cpp  OpenCLHelpers.hpp
libs/Time/: Time.cpp  Time.hpp
